force-app/main/default/objects/Deal_Participant_Contribution__c/Deal_Participant_Contribution__c.object-meta.xml
<CustomObject>
<label
  >Deal Participant Contribution</label><pluralLabel
  >Deal Participant Contributions</pluralLabel>
    <nameField><displayFormat>DPC-{00000000}</displayFormat><label
    >Deal Participant Contribution Number</label><type
    >AutoNumber</type></nameField>
    <sharingModel>ControlledByParent</sharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities>
</CustomObject>