force-app/main/default/objects/Deal_Participant_Contribution__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel
  >Deal Participant Contributions Approved</relationshipLabel>
    <relationshipName>Deal_Participant_Contributions_Approved</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>