force-app/main/default/objects/Deal_Participant_Contribution__c/fields/Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Type__c</fullName>
    <label>Contribution Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Origination</fullName><default
        >false</default><label>Origination</label></value>
            <value><fullName>Sales</fullName><default>false</default><label
        >Sales</label></value>
            <value><fullName>Technical</fullName><default>false</default><label
        >Technical</label></value>
            <value><fullName>Commercial</fullName><default>false</default><label
        >Commercial</label></value>
            <value><fullName>Implementation</fullName><default
        >false</default><label>Implementation</label></value>
            <value><fullName>Referral</fullName><default>false</default><label
        >Referral</label></value>
            <value><fullName>Renewal</fullName><default>false</default><label
        >Renewal</label></value>
            <value><fullName>Other</fullName><default>false</default><label
        >Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>