force-app/main/default/objects/Deal_Participant_Contribution__c/fields/Deal_Participant__c.field-meta.xml
<CustomField>
    <fullName>Deal_Participant__c</fullName>
    <label>Deal Participant</label>
    <type>MasterDetail</type>
    <referenceTo>Deal_Participant__c</referenceTo>
    <relationshipLabel>Contributions</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
</CustomField>