force-app/main/default/objects/Deal_Participant_Contribution__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>